--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <ul>
+            <li>Homw</li>
+            <li>About</li>
+            <li>Contact</li>
+        </ul>
+    </header>
     <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, aut?</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum possimus consequuntur dicta impedit nesciunt hic, nostrum atque sed qui quaerat.</p>
 </body>
